[metadata]
license_file = LICENSE

[versioneer]
VCS = git
style = pep440
versionfile_source = pyilluminate/_version.py
versionfile_build = pyilluminate/_version.py
tag_prefix=release-
parentdir_prefix = pyilluminate

[mypy]
python_version = 3.6
ignore_missing_imports = True

[mypy-pyilluminate._version]
ignore_errors = True
