[metadata]
license_file = LICENSE

[versioneer]
VCS = git
style = pep440
versionfile_source = pyilluminate/_version.py
versionfile_build = pyilluminate/_version.py
tag_prefix=
parentdir_prefix = pyilluminate

[flake8]
ignore =
  # W504 line break after binary operator
  W504,
  # This is because flake8 doens't do well with typehint style
  # E252 missing whitespace around parameter equals
  E252,

exclude = versioneer.py

[mypy]
python_version = 3.6
ignore_missing_imports = True

[mypy-pyilluminate._version]
ignore_errors = True

