[metadata]
license_file = LICENSE

[flake8]
max_line_length=100
ignore =
  # W504 line break after binary operator
  W504,
  # This is because flake8 doens't do well with typehint style
  # E252 missing whitespace around parameter equals
  E252,

exclude =
  versioneer.py

[mypy]
python_version = 3.7
ignore_missing_imports = True

[mypy-pyilluminate._version]
ignore_errors = True

